<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvModelo"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_modelo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="54dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Data"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCategoria" />

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:padding="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvid"
        tools:text="@string/text_nome" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="74dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Valor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeProduto" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_categoria"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />


</androidx.constraintlayout.widget.ConstraintLayout>